--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-pedidos-app",
+  "name": "pedidos-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,5 +14,10 @@
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
