Apuntes + Ejemplo .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-DATABASE_URL="mysql://username:password@host:port/dbname"
+DATABASE_URL="mysql://username:password@host:port/dbname" # example: mysql://root:123456@localhost:3306/pedidosapp
